--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-
+Django>=5.0,<6.0
+psycopg2-binary>=2.9
+Pillow>=9.0
+python-decouple>=3.6
+crispy-bootstrap5>=2024.2
+# tailwindcss isn't a pip package; ensure frontend build separately
